  * Remove another stray newline from the migration-assistant summary.
  * GTK frontend:
    - Pressing Enter in the migration-assistant user/password entry boxes
      activates the Forward button.
    - Drop X-Ubuntu-Gettext-Domain=ubiquity in the .desktop file for now, to
      work around a bug somewhere that causes the translations in the
      .desktop file to be ignored in that case.
  * Remove the old advanced partitioner.
  * Use code based on shutil.copyfileobj rather than shutil.copyfile to copy
    files, avoiding a couple of unnecessary stats due to os.path.samefile.
  * Remove netcloner, noui, and text frontends, which are too out-of-date at
    the moment even to be worth using as examples. A reimplementation would
    need to start from scratch anyway.
  * Rename gtkui frontend to gtk-ui to match kde-ui (which had to be named
    that way due to a clash with python-kde3).
  * Update some copyright dates.
  * Split out internationalisation code from ubiquity.misc into
    ubiquity.i18n.
  * Remove some dead code from ubiquity.misc.
  * Create a BaseFrontend class and move various things to it; it now counts
    as a relatively clear specification of what a frontend has to implement.
  * Reorder some frontend methods to follow the ordering of the UI.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Apr 2007 15:21:08 +0100

ubiquity (1.4.11) feisty; urgency=low

  * Fix broken French and Turkish translations of "Go Back" and "Continue"
    (LP: #105903).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Apr 2007 18:46:59 +0100

ubiquity (1.4.10) feisty; urgency=low

  * Improve the layout of the language page resulting from the release-notes
    link (LP: #105470).
  * Automatic update of included source packages: hw-detect 1.45ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 11 Apr 2007 14:10:21 +0100

ubiquity (1.4.9) feisty; urgency=low

  * Suppress error dialog if the user quits while a debconffiltered process
    is running.